--- a/devops.html
+++ b/devops.html
@@ -62,11 +62,11 @@
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698547390-senior-staff-software-engineer-devops'>Visa Senior Staff Software Engineer, DevOps | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698547390-senior-staff-software-engineer-devops'>Visa Senior Staff Software Engineer, DevOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/Rdp1bhIBIU/DevOps-Engineer'>DevOps Engineer - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/Rdp1bhIBIU/DevOps-Engineer'>DevOps Engineer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Bethesda, MD</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -198,7 +198,7 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/interana/jobs/4493924002'>Job Application for DevOps Lead Engineer at Interana</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/interana/jobs/4493924002'>Job Application for DevOps Lead Engineer at Interana</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -251,7 +251,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oqPhbfwr&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nJl9oMwS'>MORI Associates, Inc. Careers - DevOps Systems Administrator - programming/automation - NASA/JPL</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oqPhbfwr&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nJl9oMwS'>MORI Associates, Inc. Careers - DevOps Systems Administrator - programming/automation - NASA/JPL</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -271,7 +271,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/devops-engineer-ts-sci-with-polygraph-a_za0AE3qr6y2vcR_n82lY'>DevOps Engineer - TS/SCI with Polygraph #0447 job at Stratus Solutions in McLean, VA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/dae/jobs/devops-engineer-ts-sci-with-polygraph-a_za0AE3qr6y2vcR_n82lY'>DevOps Engineer - TS/SCI with Polygraph #0447 job at Stratus Solutions in McLean, VA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Mc Lean, VAMc Lean, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -333,11 +333,11 @@ agile service team focused on daily production service delivery and application?
 such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oas49fwz&__jvst=Employee&__jvsd=sPcd2gw1&__jvsc=Twitter&bid=nC88mMwv'>Schneider Electric NAM Careers - Security Team Leader (Cloud, Big Data, DevOps, Risk Assurance)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oas49fwz&__jvst=Employee&__jvsd=sPcd2gw1&__jvsc=Twitter&bid=nC88mMwv'>Schneider Electric NAM Careers - Security Team Leader (Cloud, Big Data, DevOps, Risk Assurance)</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts  Bangalore Boston</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1S4afwR&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n998mMw3'>ServiceNow Careers - Technical Lead ? DevOps</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1S4afwR&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n998mMw3'>ServiceNow Careers - Technical Lead ? DevOps</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -383,7 +383,7 @@ such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BlueWireSoftware/743999698356632-senior-devops-engineer'>Blue Wire Software Senior DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlueWireSoftware/743999698356632-senior-devops-engineer'>Blue Wire Software Senior DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -395,7 +395,7 @@ such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://virtumente.com/job/ipresence-devops-engineer/'>iPresence: DevOps Engineer ? Virtumente</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://virtumente.com/job/ipresence-devops-engineer/'>iPresence: DevOps Engineer ? Virtumente</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -408,7 +408,7 @@ such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
 <p>Oct 21, 2019 ... 1.1.1.1: We released 1.1.1.1 to help fix the foundation of the Internet by building a 
 faster, more secure and privacy-centric public DNS resolver. This is available?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/j2-global/job/oHiobfwi'>J2 Global Careers - DevOPs Systems Administrator</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/j2-global/job/oHiobfwi'>J2 Global Careers - DevOPs Systems Administrator</a></h5> 
 <p><span class="badge badge-light">Galway</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -456,7 +456,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
