--- a/software.html
+++ b/software.html
@@ -39,6 +39,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/corelight/jobs/1934385'>Job Application for Network Security Software Engineer at Job Board</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/corelight/jobs/1938984'>Job Application for Network Security Software Engineer at Job Board</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/kayak/jobs/4495706002'>Job Application for Software Engineer (Programmatic Marketing) at KAYAK</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -55,7 +63,7 @@
 <p><span class="badge badge-light">Seattle, WASeattle, Washington</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sweetgreen/jobs/1939889'>Job Application for Senior Software Engineer, Data at  sweetgreen</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sweetgreen/jobs/1939889'>Job Application for Senior Software Engineer, Data at  sweetgreen</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -123,7 +131,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/ariasystems/jobs/workflow-software-engineer-dcSCwKKsCr6ByyaICoXfFy'>Workflow Software Engineer #0191 job at Aria Systems in Iowa City, IA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/ariasystems/jobs/workflow-software-engineer-dcSCwKKsCr6ByyaICoXfFy'>Workflow Software Engineer #0191 job at Aria Systems in Iowa City, IA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -167,7 +175,7 @@
 <p><span class="badge badge-light">Chicago, Illinois  Chicago, IL</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://sintratec.join.com/jobs/454869-software-developer-java'>Job @ Sintratec (Brugg): Software Developer Java | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sintratec.join.com/jobs/454869-software-developer-java'>Job @ Sintratec (Brugg): Software Developer Java | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -213,7 +221,7 @@
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698289067-senior-software-engineer-front-end'>Optimizely Senior Software Engineer, Front End | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698289067-senior-software-engineer-front-end'>Optimizely Senior Software Engineer, Front End | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -225,7 +233,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=smYmMgwd&__jvsc=Twitter&bid=nv8ipMwB'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=smYmMgwd&__jvsc=Twitter&bid=nv8ipMwB'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -245,11 +253,11 @@
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=obRn9fwi&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nNehpMwY'>Guidewire Software, Inc. Careers - Software Engineer - Cloud Native Software Developer -  San Mateo, CA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=obRn9fwi&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nNehpMwY'>Guidewire Software, Inc. Careers - Software Engineer - Cloud Native Software Developer -  San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior---staff---principal-1557543/?gh_src=2748acb81'>Software Engineer, Security (Senior / Staff / Principal) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior---staff---principal-1557543/?gh_src=2748acb81'>Software Engineer, Security (Senior / Staff / Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -301,7 +309,7 @@
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/oixMafwv'>Infostretch Corporation Careers - Senior Software Engineer (.Net)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/oixMafwv'>Infostretch Corporation Careers - Senior Software Engineer (.Net)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -325,7 +333,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/principal-software-engineer-1797709/?gh_src=82a8057f1'>Principal Software Engineer | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/principal-software-engineer-1797709/?gh_src=82a8057f1'>Principal Software Engineer | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -357,7 +365,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/security/senior-software-engineer-security-automation-1805708/?gh_src=82a8057f1'>Senior Software Engineer, Security Automation | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/security/senior-software-engineer-security-automation-1805708/?gh_src=82a8057f1'>Senior Software Engineer, Security Automation | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -369,7 +377,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/principal-software-engineer--authentication--1575126/?gh_src=82a8057f1'>Principal Software Engineer -Authentication | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/principal-software-engineer--authentication--1575126/?gh_src=82a8057f1'>Principal Software Engineer -Authentication | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -385,7 +393,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior--staff--principal-1650474/?gh_src=82a8057f1'>Software Engineer, Security (Senior/ Staff/ Principal) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior--staff--principal-1650474/?gh_src=82a8057f1'>Software Engineer, Security (Senior/ Staff/ Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -397,7 +405,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior---staff---principal-1557543/?gh_src=82a8057f1'>Software Engineer, Security (Senior / Staff / Principal) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-security-senior---staff---principal-1557543/?gh_src=82a8057f1'>Software Engineer, Security (Senior / Staff / Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -431,14 +439,6 @@
 <hr/>
 <h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1937416'>Job Application for Software Engineer- Front End at Fuze</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1939551'>Job Application for Senior Software Engineer- Front End at Fuze</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA  Boston, MA</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/logitech/job/oylxafwk'>Logitech Careers - Senior Software Engineer - Architect</a></h5> 
-<p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
